--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@ header {
   height: fit-content; /* Or you can control height */
   z-index: 10;
 }
-.expAboutListWrapper {
+.listWrapper {
   overflow-x: auto;
 }
 
@@ -255,19 +255,18 @@ header {
 #skill {
   background-color: var(--bg-skill);
 }
-#skill .about-and-list {
+#skill .aboutAndList {
   display: flex;
   flex-direction: column;
   gap: 30px;
   position: relative;
 }
 
-.skill-about {
+.skillAbout {
   width: 100%;
   margin: 0 auto; /* center it horizontally */
   margin: 20px 0 0 0;
   padding: 20px;
-  /* flex: 0 0 150px; */
   max-width: 100%;
   padding: 20px;
   background-color: var(--bg-about);
@@ -278,17 +277,17 @@ header {
   height: fit-content; /* Or you can control height */
   z-index: 10;
 }
-.skill-about__title {
+.skillAboutTitle {
   font-size: var(--fs-h3);
   font-weight: bold;
   margin-bottom: 10px;
 }
-.skill-about__subtitle {
+.skillAboutSubtitle {
   font-size: var(--fs-body);
   opacity: 0.8;
 }
 
-.skill-list {
+.skillList {
   height: 100%;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -298,16 +297,12 @@ header {
   overflow-x: auto;
 }
 
-.skill__item {
+.skillItem {
   display: flex;
-  /* flex-direction: column; */
-  /* justify-content: center; */
-  /* align-items: center; */
-  /* text-align: center; */
   padding: 20px;
 }
 
-.skill__container i {
+.skillContainer i {
   width: 50px;
   height: 50px;
   font-size: 2em;
@@ -315,42 +310,41 @@ header {
   justify-content: center;
   align-items: center;
 }
-.skill__title {
+.skillTitle {
   font-size: var(--fs-h3);
 }
-.skill__paragraph {
+.skillParagraph {
   font-size: var(--fs-body);
 }
-
 /* end skill */
 
 /* project */
 #project {
-  background-color: #6e6e6e;
-  color: #444b57;
+  background-color: var(--bg-project);
+  color: var(--clr-dark);
 }
 
-#project .list {
+.projectList {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 30px;
   padding: 50px;
 }
 
-#project .list .item img {
+.projectList .item img {
   width: 100%;
   height: 150px;
   object-fit: cover;
 }
 
-#project .list .item {
+.projectList .item {
   border-radius: 20px;
   background-color: #fff;
   overflow: hidden;
   position: relative;
 }
 
-.proj-index {
+.projIndex {
   font-weight: bold;
   font-size: 1.5em;
   position: absolute;
@@ -361,24 +355,24 @@ header {
   border-top-right-radius: 20px;
 }
 
-.proj-name {
+.projName {
   font-weight: bold;
   font-size: large;
   padding: 10px;
 }
 
-.proj-des {
+.projDes {
   padding: 0 10px 10px 10px;
   font-size: small;
 }
 
-.proj-author {
+.projAuthor {
   display: flex;
   justify-content: space-between;
   padding: 10px;
   border-top: 1px solid #eee;
 }
-.proj-job {
+.projJob {
   font-weight: bold;
 }
 
@@ -397,16 +391,16 @@ header {
   overflow: hidden;
 }
 
-.image-container {
+.imageContainer {
   position: relative;
 }
 
-.image-container img {
+.imageContainer img {
   width: 100%;
   display: block;
 }
 
-.proj-links {
+.projLinks {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -417,7 +411,7 @@ header {
   transition: opacity 0.3s ease;
 }
 
-.proj-links a {
+.projLinks a {
   color: white;
   font-size: 2em;
   background-color: rgba(0, 0, 0, 0.6);
@@ -426,13 +420,13 @@ header {
   transition: background 0.3s, transform 0.3s;
 }
 
-.proj-links a:hover {
+.projLinks a:hover {
   background-color: rgba(49, 147, 177, 0.5);
   transform: scale(1.2);
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
 }
 
-.image-container:hover .proj-links {
+.imageContainer:hover .projLinks {
   opacity: 1;
 }
 
@@ -440,7 +434,8 @@ header {
 
 /* contact */
 #contact {
-  background-color: #242330;
+  background-color: var(--bg-contact);
+  color: var(--clr-dark);
 }
 
 #contact .thank {
@@ -456,28 +451,28 @@ header {
   align-items: center;
   padding: 50px;
 }
-#contact .des {
+.contactDes {
   width: 500px;
   max-width: 80%;
   text-align: center;
 }
 
-#contact .des button {
+.contactDes button {
   margin-top: 1.2em;
   border-radius: 5px;
   cursor: pointer;
   transition: background 0.3s;
 }
 
-#contact .des button:hover {
+.contactDes button:hover {
   scale: 1.025;
 }
 
-#contact .list {
+.contactList {
   text-align: center;
 }
 
-#contact .list .item {
+.contactListItem {
   display: inline-block;
   margin: 10px 30px;
 }
@@ -485,8 +480,14 @@ header {
 
 /* responsiveness */
 @media screen and (max-width: 991px) {
-  .intro__img {
+  .introImg {
     transform: translateX(200px);
+  }
+  .textGradient {
+    background-image: var(--clr-accent);
+    display: inline-block;
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
   }
 }
 @media screen and (max-width: 767px) {
@@ -519,12 +520,12 @@ header {
   .introContentJob {
     font-size: 6em;
   }
-
-  .introContentJob .text-gradient {
-    background-image: linear-gradient(to right, #e4454a, #ca3ea7);
-    color: initial;
-    text-shadow: none;
+  .textGradient {
+    background-image: var(--clr-accent);
     display: inline-block;
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    text-shadow: none;
   }
 
   .introContentDes {
@@ -542,22 +543,24 @@ header {
   .experienceAbout {
     flex: 0 0 180px;
   }
-  .skill-list {
+  .skillList {
     padding: 0;
     grid-template-columns: repeat(2, 1fr);
   }
 
-  #project .list {
+  .projectList {
     padding: 10px;
     grid-template-columns: repeat(2, 1fr);
     gap: 5px;
   }
-  #project .list .item img {
+  .projectList .item img {
     height: 100px;
   }
-  #project .list .item {
+  .projectList .item {
     margin-top: 15px;
   }
+}
+@media screen and (max-width: 431px) {
 }
 
 /* effect */
