--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
   --fs-h2: 2.25rem;
   --fs-h3: 1.25rem;
   --fs-body: 1rem;
+  --fs-sm: 0.75rem;
 }
 button {
   cursor: pointer;
@@ -143,7 +144,6 @@ header {
 
 .experienceAbout {
   width: 100%;
-  margin: 0 auto; /* center it horizontally */
   margin: 20px 0 0 0;
   padding: 20px;
   flex: 0 0 150px;
@@ -561,6 +561,45 @@ header {
   }
 }
 @media screen and (max-width: 431px) {
+  .experienceAboutAndList {
+    margin: 60px 0 0 0;
+  }
+  .experienceAboutTitle {
+    font-size: var(--fs-body);
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+
+  .experienceAboutSubtitle {
+    font-size: var(--fs-sm);
+    opacity: 0.8;
+  }
+  .expTime {
+    font-size: var(--fs-sm);
+    display: flex;
+    align-items: end;
+  }
+
+  .expJob {
+    font-size: var(--fs-sm);
+  }
+
+  .expCompany {
+    font-size: var(--fs-sm);
+    color: #4adb3d;
+  }
+
+  .expDes {
+    font-size: var(--fs-sm);
+    opacity: 0.7;
+  }
+  .aboutAndList {
+    margin: 60px 0 0 0;
+    max-width: fit-content;
+  }
+  .projectList {
+    margin: 60px 0 0 0;
+  }
 }
 
 /* effect */
