--- a/style.css
+++ b/style.css
@@ -27,24 +27,32 @@ body {
 }
 button {
   cursor: pointer;
+  position: relative;
   border-radius: 5px;
   font-size: var(--fs-body);
-  font-weight: bold;
+
   padding: 8px 12px;
   margin: 10px 10px;
-  transition: background 0.3s;
+
+  overflow: hidden;
+  text-decoration: none;
+  font-weight: bold;
+  transition: all 0.4s ease;
+  box-shadow: 0 2px 10px rgba(84, 216, 23, 0.3);
+
   background-image: var(--clr-accent);
   display: inline-block;
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
 }
 button:hover {
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-  scale: 1.03;
+  transform: translateY(-3px);
+  box-shadow: 0 5px 15px rgba(84, 216, 23, 0.4);
 }
-::-webkit-scrollbar {
+
+/* ::-webkit-scrollbar {
   width: 0;
-}
+} */
 
 /* header */
 header {
@@ -116,11 +124,65 @@ header {
   margin-top: 1.2em;
   border-radius: 5px;
   cursor: pointer;
-  transition: background 0.3s;
+  transition: all 0.4s ease;
 }
 .introContentDes button:hover {
   scale: 1.025;
 }
+
+/* start cv download */
+.cvButton {
+  position: relative;
+  border-radius: 5px;
+  font-size: var(--fs-body);
+
+  padding: 8px 12px;
+  margin: 10px 10px;
+  margin-bottom: -10px;
+  background-color: var(--clr-accent);
+  color: var(--bg-intro);
+
+  overflow: hidden;
+  text-decoration: none;
+  font-weight: bold;
+  z-index: 1;
+  transition: all 0.4s ease;
+  box-shadow: 0 2px 10px rgba(84, 216, 23, 0.3);
+
+  display: inline-block;
+  background-image: var(--clr-accent); /* Now the gradient will work! */
+  background-color: transparent; /* Optional: Remove any fallback color */
+}
+
+.cvButton i {
+  margin-right: 8px;
+}
+
+.hoverEffect {
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    90deg,
+    transparent,
+    rgba(255, 255, 255, 0.2),
+    transparent
+  );
+  transition: 0.5s;
+  z-index: -1;
+}
+
+.cvButton:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 5px 15px rgba(84, 216, 23, 0.4);
+}
+
+.cvButton:hover .hoverEffect {
+  left: 100%;
+}
+/* end cv download */
 
 .introContent i {
   font-size: 10em;
@@ -461,7 +523,7 @@ header {
   margin-top: 1.2em;
   border-radius: 5px;
   cursor: pointer;
-  transition: background 0.3s;
+  transition: all 0.4s ease;
 }
 
 .contactDes button:hover {
